Added CheckingAccount class header and updated Client class.

--- a/2110-Project/2110-Project.vcxproj.filters
+++ b/2110-Project/2110-Project.vcxproj.filters
@@ -26,5 +26,8 @@
     <ClInclude Include="Client.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="CheckingAccount.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
