Changed balance variable from private to protected. Made Account.cpp

--- a/2110-Project/2110-Project.vcxproj
+++ b/2110-Project/2110-Project.vcxproj
@@ -139,6 +139,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Account.cpp" />
     <ClCompile Include="Main.cpp" />
   </ItemGroup>
   <ItemGroup>
