Added CheckingAccount.cpp. Added comments to most files.

--- a/2110-Project/2110-Project.vcxproj
+++ b/2110-Project/2110-Project.vcxproj
@@ -140,6 +140,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="Account.cpp" />
+    <ClCompile Include="CheckingAccount.cpp" />
     <ClCompile Include="Main.cpp" />
   </ItemGroup>
   <ItemGroup>
