--- a/2110-Project/2110-Project.vcxproj.filters
+++ b/2110-Project/2110-Project.vcxproj.filters
@@ -21,6 +21,9 @@
     <ClCompile Include="Account.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="CheckingAccount.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Account.h">
