Added Client.cpp. changed all references to variable typle 'string' to have "std::" infront of it. Reason being it caused error when not and apparenlty not doing so is frowned upon in c++ coding.

--- a/2110-Project/2110-Project.vcxproj.filters
+++ b/2110-Project/2110-Project.vcxproj.filters
@@ -24,6 +24,9 @@
     <ClCompile Include="CheckingAccount.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Client.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Account.h">
