--- a/2110-Project/2110-Project.vcxproj
+++ b/2110-Project/2110-Project.vcxproj
@@ -141,6 +141,7 @@
   <ItemGroup>
     <ClCompile Include="Account.cpp" />
     <ClCompile Include="CheckingAccount.cpp" />
+    <ClCompile Include="Client.cpp" />
     <ClCompile Include="Main.cpp" />
   </ItemGroup>
   <ItemGroup>
