--- a/2110-Project/2110-Project.vcxproj.filters
+++ b/2110-Project/2110-Project.vcxproj.filters
@@ -27,6 +27,9 @@
     <ClCompile Include="Client.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="BankSystem.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Account.h">
@@ -36,6 +39,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="CheckingAccount.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="BankSystem.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
